# notebook-panopticon

./: .gitignore  CLAUDE.md  app.py  notebook-diff-viewer-spec.md  pyproject.toml  rubric_analysis.py  starter_notebooks.py
utils/: find_starters.py  ingest_submissions.py
